fix spacing bug

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     align-items: center;
     position: absolute;
     top: 150px;
-    left: 20%;
+    left: 30%;
 }
 .img-background{
     
